@@ -1,3 +1,8 @@
+2004-06-28  Paolo Carlini  <pcarlini@suse.de>
+
+	* src/localename.cc (locale::_Impl::_Impl): Slightly improve
+	the algorithm used to name the categories.
+
 2004-06-28  Paolo Bonzini  <bonzini@gnu.org>
 
 	* include/Makefile.am: Give a .gch extension to
